--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.moringaschool.outingapi2">
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -10,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".CreateNewAccount"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,38 +22,32 @@
         <activity android:name=".EscapeActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.moringaschool.outingapi2.MainActivity">
-            </meta-data>
+                android:value="com.moringaschool.outingapi2.MainActivity"></meta-data>
         </activity>
         <activity android:name=".EventActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.moringaschool.outingapi2.EventActivity">
-            </meta-data>
+                android:value="com.moringaschool.outingapi2.EventActivity"></meta-data>
         </activity>
         <activity android:name=".SavedActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.moringaschool.outingapi2.SavedActivity">
-            </meta-data>
+                android:value="com.moringaschool.outingapi2.SavedActivity"></meta-data>
         </activity>
         <activity android:name=".SearchActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.moringaschool.outingapi2.SearchActivity">
-            </meta-data>
+                android:value="com.moringaschool.outingapi2.SearchActivity"></meta-data>
         </activity>
         <activity android:name=".ApiActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.moringaschool.outingapi2.ApiActivity">
-            </meta-data>
+                android:value="com.moringaschool.outingapi2.ApiActivity"></meta-data>
         </activity>
         <activity android:name=".EventInfoActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.moringaschool.outingapi2.EventInfoActivity">
-            </meta-data>
+                android:value="com.moringaschool.outingapi2.EventInfoActivity"></meta-data>
         </activity>
     </application>
 
