added new activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CreateNewAccount"></activity>
+        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".CreateNewAccount" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,32 +23,32 @@
         <activity android:name=".EscapeActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.moringaschool.outingapi2.MainActivity"></meta-data>
+                android:value="com.moringaschool.outingapi2.MainActivity" />
         </activity>
         <activity android:name=".EventActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.moringaschool.outingapi2.EventActivity"></meta-data>
+                android:value="com.moringaschool.outingapi2.EventActivity" />
         </activity>
         <activity android:name=".SavedActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.moringaschool.outingapi2.SavedActivity"></meta-data>
+                android:value="com.moringaschool.outingapi2.SavedActivity" />
         </activity>
         <activity android:name=".SearchActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.moringaschool.outingapi2.SearchActivity"></meta-data>
+                android:value="com.moringaschool.outingapi2.SearchActivity" />
         </activity>
         <activity android:name=".ApiActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.moringaschool.outingapi2.ApiActivity"></meta-data>
+                android:value="com.moringaschool.outingapi2.ApiActivity" />
         </activity>
         <activity android:name=".EventInfoActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.moringaschool.outingapi2.EventInfoActivity"></meta-data>
+                android:value="com.moringaschool.outingapi2.EventInfoActivity" />
         </activity>
     </application>
 
